tests/suite/snapshots/suite__case_de56_00.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: DoubleQuote
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: DoubleQuoted
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 11
- token: Escape
  start:
    line: 0
    column: 11
  end:
    line: 0
    column: 12
- token: EscapeCode
  start:
    line: 0
    column: 12
  end:
    line: 0
    column: 13
- token: ScalarSpace
  start:
    line: 0
    column: 13
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Separator
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 4
- token: DoubleQuoted
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 7
- token: DoubleQuote
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 8
- token: Break
  start:
    line: 1
    column: 8
  end:
    line: 2
    column: 0

