tests/suite/snapshots/suite__case_de56_03.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: DoubleQuote
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: DoubleQuoted
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 11
    line: 0
    column: 11
- token: Escape
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 12
    line: 0
    column: 12
- token: EscapeCode
  start:
    index: 12
    line: 0
    column: 12
  end:
    index: 13
    line: 0
    column: 13
- token: Separator
  start:
    index: 13
    line: 0
    column: 13
  end:
    index: 15
    line: 0
    column: 15
- token: ScalarSpace
  start:
    index: 15
    line: 0
    column: 15
  end:
    index: 17
    line: 1
    column: 0
- token: Indent
  start:
    index: 17
    line: 1
    column: 0
  end:
    index: 17
    line: 1
    column: 0
- token: Separator
  start:
    index: 17
    line: 1
    column: 0
  end:
    index: 21
    line: 1
    column: 4
- token: DoubleQuoted
  start:
    index: 21
    line: 1
    column: 4
  end:
    index: 24
    line: 1
    column: 7
- token: DoubleQuote
  start:
    index: 24
    line: 1
    column: 7
  end:
    index: 25
    line: 1
    column: 8
- token: Break
  start:
    index: 25
    line: 1
    column: 8
  end:
    index: 27
    line: 2
    column: 0

