tests/suite/snapshots/suite__case_dhp8.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceStart
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Scalar
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 4
- token: CollectionEntry
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: Separator
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: Scalar
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 9
- token: CollectionEntry
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: Separator
  start:
    line: 0
    column: 10
  end:
    line: 0
    column: 11
- token: Scalar
  start:
    line: 0
    column: 11
  end:
    line: 0
    column: 13
- token: SequenceEnd
  start:
    line: 0
    column: 13
  end:
    line: 0
    column: 14
- token: Break
  start:
    line: 0
    column: 14
  end:
    line: 1
    column: 0

