tests/suite/snapshots/suite__case_dk3j.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Folded
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: Break
  start:
    line: 0
    column: 5
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 5
- token: ScalarSpace
  start:
    line: 1
    column: 5
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 12
- token: ScalarSpace
  start:
    line: 2
    column: 12
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Scalar
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 5
- token: ScalarBreak
  start:
    line: 3
    column: 5
  end:
    line: 4
    column: 0

