tests/suite/snapshots/suite__case_dk95_02.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: MappingValue
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Separator
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: DoubleQuote
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: DoubleQuoted
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 9
    line: 0
    column: 9
- token: ScalarSpace
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 11
    line: 1
    column: 0
- token: Indent
  start:
    index: 11
    line: 1
    column: 0
  end:
    index: 12
    line: 1
    column: 1
- token: Separator
  start:
    index: 12
    line: 1
    column: 1
  end:
    index: 14
    line: 1
    column: 3
- token: DoubleQuoted
  start:
    index: 14
    line: 1
    column: 3
  end:
    index: 17
    line: 1
    column: 6
- token: DoubleQuote
  start:
    index: 17
    line: 1
    column: 6
  end:
    index: 18
    line: 1
    column: 7
- token: Break
  start:
    index: 18
    line: 1
    column: 7
  end:
    index: 20
    line: 2
    column: 0

